--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Paytone+One&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -9,7 +11,8 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100dvh;
-    background-color: antiquewhite;
+    background-color: rgb(240, 240, 215);
+    font-family: 'Ubuntu', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 main {
@@ -20,19 +23,24 @@ main {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 5rem;
+}
 
+main > div {
     border: 1px solid gray;
     border-radius: 1rem;
     box-shadow: 0rem 1rem 1rem lightgray;
     background-color: white;
-}
-
-main > div {
-    /* border: 1px solid red; */
+    padding: 2rem;
 }
 
 h2 {
     text-align: center;
+}
+
+.produtos .descricao {
+    display: flex;
+    padding: 1rem 2rem 0 1.75rem;
+    gap: 3.25rem;
 }
 
 .produtos .produto {
@@ -56,13 +64,19 @@ h2 {
     background-color: lightblue;
 }
 
+.carrinho .descricao {
+    display: flex;
+    padding: 1rem 2rem 0 1.5rem;
+    gap: 1.3rem;
+}
+
 .carrinho .item {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr auto;
     align-items: center;
 
     padding: .5rem;
-    margin-block: .25rem;
+    margin-block: .5rem;
     border: 1px solid gray;
     /* border-radius: .5rem; */
     background-color: white;
