--- a/frontend/style.css
+++ b/frontend/style.css
@@ -17,7 +17,7 @@ body {
 
 main {
     min-height: 20rem;
-    width: 50rem;
+    width: 60rem;
     padding: 1rem;
     
     display: grid;
@@ -65,14 +65,17 @@ h2 {
 }
 
 .carrinho .descricao {
-    display: flex;
-    padding: 1rem 2rem 0 1.5rem;
-    gap: 1.3rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    padding: .5rem;
+    margin-block: .5rem;
+    text-align: center;
 }
 
 .carrinho .item {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr auto;
+    display: none;
+    grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
 
     padding: .5rem;
